[gd_scene load_steps=15 format=3 uid="uid://dt5blvo4fvgke"]

[ext_resource type="Script" uid="uid://g6ao4sshsevr" path="res://Scripts/UI/hud.gd" id="1_qc5w2"]
[ext_resource type="PackedScene" uid="uid://bo8o0x3o2moa6" path="res://Scenes/UI/WinLosePopUp.tscn" id="2_qc5w2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_umhnj"]
size = Vector2(200, 20)

[sub_resource type="Gradient" id="Gradient_umhnj"]
colors = PackedColorArray(0.68235296, 0, 0, 1, 1, 0.6313726, 0.25490198, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_omqfp"]
gradient = SubResource("Gradient_umhnj")
width = 20

[sub_resource type="Gradient" id="Gradient_qc5w2"]
colors = PackedColorArray(0.4862745, 0.4862745, 0, 1, 1, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xaom8"]
gradient = SubResource("Gradient_qc5w2")
width = 20

[sub_resource type="Gradient" id="Gradient_omqfp"]
offsets = PackedFloat32Array(0, 0.94186044, 1)
colors = PackedColorArray(0.91764706, 0, 0, 1, 0.99607843, 0.3882353, 0.9411765, 1, 1, 0.29803923, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qc5w2"]
gradient = SubResource("Gradient_omqfp")
width = 20

[sub_resource type="Gradient" id="Gradient_xaom8"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4bm6u"]
gradient = SubResource("Gradient_xaom8")
width = 20

[sub_resource type="Gradient" id="Gradient_4bm6u"]
colors = PackedColorArray(0.261541, 0.47718966, 0.9868447, 1, 0.054634377, 0, 0.8249099, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ykvyr"]
gradient = SubResource("Gradient_4bm6u")
width = 300
height = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qc5w2"]
bg_color = Color(0, 0, 0, 0.7058824)

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qc5w2")

[node name="PassiveIncome" type="HBoxContainer" parent="."]
offset_left = 219.0
offset_top = 20.0
offset_right = 342.0
offset_bottom = 60.0

[node name="PassiveIncomeLabel" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "Passive Income:"

[node name="IncomeCount" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "000"

[node name="MoneyLabel" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "гривнів"

[node name="Every" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "every"

[node name="IcomeTime" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "000"

[node name="Minutes" type="Label" parent="PassiveIncome"]
layout_mode = 2
text = "minutes"

[node name="GlobalEfficiency" type="HBoxContainer" parent="."]
offset_left = 219.0
offset_top = 47.0
offset_right = 588.0
offset_bottom = 87.0

[node name="EfficiencyLabel" type="Label" parent="GlobalEfficiency"]
layout_mode = 2
text = "General Production Efficiency:"

[node name="EfficiencyCount" type="Label" parent="GlobalEfficiency"]
layout_mode = 2
text = "000"

[node name="Time" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1659.0
offset_top = 1.0
offset_right = 1699.0
offset_bottom = 41.0
scale = Vector2(1.5600024, 1.5600024)

[node name="HBoxContainer" type="HBoxContainer" parent="Time"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Day" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "Day"

[node name="DayNumber" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Time" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="HourNumber" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="_" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="MinuteNumber" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="TimeOfDay" type="Label" parent="Time"]
layout_mode = 0
offset_left = 42.307587
offset_top = 35.256355
offset_right = 82.30759
offset_bottom = 58.256355
text = "Test"

[node name="People" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 50.0
offset_bottom = 46.0

[node name="VBoxContainer" type="VBoxContainer" parent="People"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MentalHealth" type="Label" parent="People/VBoxContainer"]
layout_mode = 2
text = "People's Mental Health"

[node name="MentalHealthProgress" type="TextureProgressBar" parent="People/VBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = SubResource("PlaceholderTexture2D_umhnj")
texture_over = SubResource("PlaceholderTexture2D_umhnj")
texture_progress = SubResource("PlaceholderTexture2D_umhnj")
tint_under = Color(1, 1, 1, 0.12156863)
tint_over = Color(0.15294118, 0, 0.6509804, 0.24313726)
tint_progress = Color(0.24313726, 1, 0.45490196, 1)

[node name="Health" type="Label" parent="People/VBoxContainer"]
layout_mode = 2
text = "People's Health"

[node name="HealthProgress" type="TextureProgressBar" parent="People/VBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = SubResource("PlaceholderTexture2D_umhnj")
texture_over = SubResource("PlaceholderTexture2D_umhnj")
texture_progress = SubResource("PlaceholderTexture2D_umhnj")
tint_under = Color(1, 1, 1, 0.12156863)
tint_over = Color(0.4118135, 0.06812616, 0.14906555, 0.24313726)
tint_progress = Color(0.60172325, 0.15286446, 0.14492828, 1)

[node name="Resources" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_top = 126.0
offset_right = 53.0
offset_bottom = 166.0

[node name="Resources" type="Label" parent="Resources"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Resources:"

[node name="ResourceTable" type="VBoxContainer" parent="Resources"]
layout_mode = 0
offset_left = 3.0
offset_top = 28.0
offset_right = 43.0
offset_bottom = 68.0

[node name="Energy" type="HBoxContainer" parent="Resources/ResourceTable"]
layout_mode = 2

[node name="EnergyCount" type="Label" parent="Resources/ResourceTable/Energy"]
layout_mode = 2
text = "0"

[node name="EnergyIcon" type="TextureRect" parent="Resources/ResourceTable/Energy"]
layout_mode = 2
tooltip_text = "Energy"
texture = SubResource("GradientTexture1D_omqfp")
expand_mode = 2

[node name="Money" type="HBoxContainer" parent="Resources/ResourceTable"]
layout_mode = 2

[node name="MoneyCount" type="Label" parent="Resources/ResourceTable/Money"]
layout_mode = 2
text = "0"

[node name="MoneyIcon" type="TextureRect" parent="Resources/ResourceTable/Money"]
layout_mode = 2
tooltip_text = "Moneys"
texture = SubResource("GradientTexture1D_xaom8")
expand_mode = 2

[node name="Heating" type="HBoxContainer" parent="Resources/ResourceTable"]
layout_mode = 2

[node name="HeatingCount" type="Label" parent="Resources/ResourceTable/Heating"]
layout_mode = 2
text = "0"

[node name="HeatingIcon" type="TextureRect" parent="Resources/ResourceTable/Heating"]
layout_mode = 2
tooltip_text = "Heating"
texture = SubResource("GradientTexture1D_qc5w2")
expand_mode = 2

[node name="UpgradeParts" type="HBoxContainer" parent="Resources/ResourceTable"]
layout_mode = 2

[node name="UpgradePartsCount" type="Label" parent="Resources/ResourceTable/UpgradeParts"]
layout_mode = 2
text = "0"

[node name="UpgradePartsIcon" type="TextureRect" parent="Resources/ResourceTable/UpgradeParts"]
layout_mode = 2
tooltip_text = "UpgradeParts"
texture = SubResource("GradientTexture1D_4bm6u")
expand_mode = 2

[node name="Energy" type="HBoxContainer" parent="Resources"]
layout_mode = 0
offset_left = 826.0
offset_top = -133.0
offset_right = 893.0
offset_bottom = -93.0
scale = Vector2(2.5200005, 2.5200005)

[node name="Energy" type="Label" parent="Resources/Energy"]
layout_mode = 2
text = "Energy"

[node name="EnergyCount" type="Label" parent="Resources/Energy"]
layout_mode = 2
text = "0"

[node name="Protection" type="VBoxContainer" parent="."]
offset_left = 17.0
offset_top = 1004.0
offset_right = 317.0
offset_bottom = 1061.0

[node name="ProtectionLabel" type="Label" parent="Protection"]
layout_mode = 2
text = "Protection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="Protection"]
layout_mode = 2
value = 50.0
texture_under = SubResource("GradientTexture2D_ykvyr")
texture_over = SubResource("GradientTexture2D_ykvyr")
texture_progress = SubResource("GradientTexture2D_ykvyr")
tint_under = Color(1, 1, 1, 0.039215688)
tint_over = Color(1, 1, 1, 0.039215688)

[node name="WinPopUp" parent="." instance=ExtResource("2_qc5w2")]
visible = false

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qc5w2")

[node name="Pause" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -370.0
offset_right = 92.5
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Pause"

[node name="PauseButtons" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -222.0
offset_right = 66.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PauseMenu/PauseButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Exit" type="Button" parent="PauseMenu/PauseButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="MuteButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 3661.0
offset_top = 2046.0
offset_right = 3750.0
offset_bottom = 2099.0
theme_override_colors/font_pressed_color = Color(1, 0.8039216, 0.8117647, 1)
theme_override_font_sizes/font_size = 32
toggle_mode = true
text = "Mute"

[connection signal="draw" from="PauseMenu" to="." method="_on_pause_menu_draw"]
[connection signal="hidden" from="PauseMenu" to="." method="_on_pause_menu_hidden"]
[connection signal="pressed" from="PauseMenu/PauseButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/PauseButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="PauseMenu/MuteButton" to="." method="_on_mute_button_toggled"]
